--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Abhishikth Aleti's portfolio">
+  <meta name="description" content="Sankar's portfolio">
   <meta name="og:image" content="http://sankar-nath.github.io/assets/profile.png">
   <link rel="shortcut icon" href="http://sankar-nath.github.io/favicon.ico">
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
@@ -35,7 +35,7 @@
   <!-- ******HEADER****** -->
   <header class="header">
     <div class="container">
-      <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg" height="180" width="180" alt="Sankar Nath" />
+      <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" height="180" width="180" alt="Sankar Nath" />
       <div class="profile-content pull-left">
         <h1 class="name">Sankar Nath</h1>
         <h2 class="desc">Student, Visual Artist, Explorer</h2>
@@ -136,8 +136,8 @@
             <div class="content">
               <ul class="list-unstyled">
                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Manipal, Karnataka, India</li>
-                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">abhishikth1997@gmail.com</a></li>
-                <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="http://www.abhishikthaleti.tk">http://www.abhishikthaleti.tk</a></li>
+                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">sankarnathsuresh@gmail.com</a></li>
+                <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="http://www.sankarnath.ml">http://www.sankarnath.ml</a></li>
               </ul>
             </div><!--//content-->
           </div><!--//section-inner-->
