changed LinkedIn to Instagram

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul class="social list-inline">
           <li><a href="https://www.facebook.com/sankar.nath1" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
           <li><a href="https://plus.google.com/u/0/109394983638337288988" target="_blank"><i class="fa fa-google-plus-square"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="https://www.instagram.com/anjalfry/" target="_blank"><i class="fa fa-instagram"></i></a></li>
           <li class="last-item"><a href="https://github.com/sankar-nath" target="_blank"><i class="fa fa-github"></i></a></li>
         </ul>
       </div><!--//profile-->
@@ -221,13 +221,13 @@
                   </li><!--//item-->
                   <li class="item">
                     <span class="title"><strong>Hindi:</strong></span>
+                    <span class="level">Fluent <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
                   </li><!--//item-->
                 </ul>
               </div><!--//content-->
             </div><!--//section-inner-->
           </aside><!--//section-->
 
-          <span class="level">Fluent <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
           <aside class="list music aside section">
             <div class="section-inner">
               <h2 class="heading">Favourite genres of music</h2>
