--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <span class="level">Very fluent <br class="visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
                   </li><!--//item-->
                   <li class="item">
-                    <span class="title"><strong>Telugu:</strong></span>
+                    <span class="title"><strong>Malayalam:</strong></span>
                     <span class="level">Mother Tongue <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
                   </li><!--//item-->
                   <li class="item">
