--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </div><!--//item-->
                 <div class="item">
                   <h3 class="title"><i class="fa fa-graduation-cap"></i>High School</h3>
-                  <h4 class="university">Kennedy High the Global School <span class="year">(2012-2014)</span></h4>
+                  <h4 class="university">St. Thomas Residential School <span class="year">(2012-2014)</span></h4>
                 </div><!--//item-->
               </div><!--//content-->
             </div><!--//section-inner-->
@@ -221,7 +221,7 @@
                   </li><!--//item-->
                   <li class="item">
                     <span class="title"><strong>Hindi:</strong></span>
-                    <span class="level">Fluent <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
+                    <span class="level">Fluent <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i>  </span>
                   </li><!--//item-->
                 </ul>
               </div><!--//content-->
